<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.book.add.AddBookFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swLoading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    app:cardBackgroundColor="@color/card_bg"
                    app:cardCornerRadius="@dimen/card_radius"
                    app:contentPadding="@dimen/card_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/edtBookTitle"
                            style="@style/EditTextNormal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/message_book_title" />

                        <EditText
                            android:id="@+id/edtBookAuthor"
                            style="@style/EditTextNormal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/message_book_author" />

                        <EditText
                            android:id="@+id/edtBookPages"
                            style="@style/EditTextNormal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/massage_book_pages"
                            android:inputType="number" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btnAdd"
                    style="@style/ButtonNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/message_add_book"
                    app:layout_constraintEnd_toEndOf="@+id/cardView"
                    app:layout_constraintStart_toStartOf="@+id/cardView"
                    app:layout_constraintTop_toBottomOf="@+id/cardView" />

                <Button
                    android:id="@+id/btnCancel"
                    style="@style/ButtonOutline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/message_cancel"
                    app:layout_constraintEnd_toEndOf="@+id/btnAdd"
                    app:layout_constraintStart_toStartOf="@+id/btnAdd"
                    app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>