<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/item_book_margin_top"
    android:layout_marginBottom="@dimen/item_book_margin_bottom"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/book_item_bg"
    app:cardCornerRadius="@dimen/item_book_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/item_book_padding_all">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBookIdLabel"
                style="@style/TextViewHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/message_book_id" />

            <TextView
                android:id="@+id/tvBookId"
                style="@style/TextViewNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                tools:text="book's id" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBookTitleLabel"
                style="@style/TextViewHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/message_book_title" />

            <TextView
                android:id="@+id/tvBookTitle"
                style="@style/TextViewNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                tools:text="book's title" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBookAuthorLabel"
                style="@style/TextViewHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/message_book_author" />

            <TextView
                android:id="@+id/tvBookAuthor"
                style="@style/TextViewNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                tools:text="book's author" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBookPagesLabel"
                style="@style/TextViewHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/massage_book_pages" />

            <TextView
                android:id="@+id/tvBookPages"
                style="@style/TextViewNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                tools:text="book's page" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>